syntax = "proto3";

option go_package = './proto';

package ecommerce;

service InventoryService {
    rpc InventoryTest(InventoryTestReq) returns (InventoryTestRes){}
}


message InventoryTestReq{
    string msg = 1;
}
message InventoryTestRes {
    string msg = 1;
}
